dev: redis config, service , TasaEnum

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=bootcoin
+server.port= 8085
 
+#REDIS CONFIG
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=3000
+
+
+tasa.compra=3
+tasa.venta=4.2
