--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
+#Mongo
 spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=bootcoin
-server.port= 8085
+
+#App
+server.port= 8086
+spring.application.name=bootcoin-msf
+
+#Microservicios
+client.ms.url= http://localhost:8080/api/client
+account.ms.url= http://localhost:8081/api/account
+credit.ms.url= http://localhost:8082/api/credit
+debit.ms.url= http://localhost:8084/api/debit
+
 
 #REDIS CONFIG
 spring.data.redis.host=localhost
